--- a/styles/about.css
+++ b/styles/about.css
@@ -49,7 +49,7 @@
   padding: 20px 40px;
   border: 4px solid var(--primary-color);
   border-radius: 20px;
-  margin: 240px 0 32px;
+  margin: 220px 0 32px;
   max-width: 700px;
   background: var(--secondary-color);
   color: var(--primary-color);
@@ -74,6 +74,13 @@
 }
 
 @media (max-width: 760px) {
+  .hero {
+    align-items: center;
+  }
+
+  .hero h1 {
+    margin-top: -60px;
+  }
   .information img {
     animation: none;
     width: 290px;
@@ -81,6 +88,7 @@
   }
   .information article {
     animation: none;
+    margin-top: 150px;
   }
   .information article:hover {
     transform: rotateY(0) skewY(0);
