--- a/styles/about.css
+++ b/styles/about.css
@@ -1,3 +1,5 @@
+/** Hero section **/
+
 .hero {
   margin-top: 60px;
   min-height: 400px;
@@ -12,6 +14,8 @@
   margin-top: 100px;
   color: var(--secondary-color);
 }
+
+/** Information section **/
 
 .information {
   display: flex;
